    configuration options.
  * Add a "View Source" tab to allow users who do not have permission to edit
    a topic to view its wiki markup.
  * Add the ability for sysadmins to permanently delete topic versions from the
    Special:Manage page.
  * Enable DBCP prepared statement pooling to improve performance.
  * Remove ability to automatically upgrade from versions prior to 0.9.0.
  * Add RankingAlgorithm search engine support (nnagarajayya).
  * Limit the number of recent changes loaded by the "Reload Recent Changes"
    task on the Special:Maintenance page to improve performance.
  * Upgrade to Lucene Search 3.1.
  * Upgrade to commons-codec 1.5.
  * Upgrade to commons-pool 1.5.6.

Bugfixes:

  * Interwiki link CSS should match internal link CSS, not external link CSS,
    and if no link text is specified the default text should display the
    interwiki prefix.  Reported by floatingworld.
  * Fix category redirects of the form "#REDIRECT [[Category:Example]]".

Translation Updates:

  * Updated German translations (axelclk).
  * Updated Russian translations (shar).


1.0.3
=====

New Features:

  * None.

Bugfixes:

  * Fix an XSS vulnerability with the search results page (Maxim Valyanskiy).
  * Fix an XSS vulnerability with the user contributions page (Maxim
    Valyanskiy).

Translation Updates:

  * Updated Chinese translations (hfl).
  * Updated Dutch translations (Angel).


1.0.2
=====

New Features:

  * Updated spam filter patterns.

Bugfixes:

  * Fix MS SQL errors on the Special:ImageList and similar pages.  Fix provided
    by Scott Barlow and Filip Rysavy.

Translation Updates:

  * Updated German translations (axelclk).


1.0.1
=====

Bugfixes:

  * Fix a locking issue with Lucene that could prevent the search index from
    being updated when topics are changed immediately after upgrading.
  * Update ASA database support for JAMWiki version 1.0.x, tested with SQL
    Anywhere 11.0.1 (dallas).